# Practice-project

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  downloader.cpp  downloader.h  main.cpp  vcpkg-configuration.json
src/: downloader.cpp  downloader.h  main.cpp
test/: test.sln
test/test-downloader/: test-downloader.vcxproj  test.cpp
test/test-downloader/x64/Debug/test-downloader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  test-downloader.lastbuildstate
